--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,7 +58,7 @@
             
             <p>and this page has been viewed <a id="counter"></a> times :) </p> 
             <ul class="social">
-               <li><a href="https://madebygps.com"><i class="fa fa-external-link"></i></a></li>
+               <li><a href="https://https://azureresumeatiyah.azureedge.net/"><i class="fa fa-external-link"></i></a></li>
                <li><a href="https://linkedin.com/in/atiyahmzulkifli"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://github.com/atiyahmzulkifli/azure-resume"><i class="fa fa-github"></i></a></li>
             </ul>
@@ -211,7 +211,7 @@
 
             <ul class="social-links">
                <li><a href="https://linkedin.com/in/atiyahmzulkifli"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="https://madebygps.com"><i class="fa fa-external-link"></i></a></li>
+               <li><a href="https://https://azureresumeatiyah.azureedge.net"></a><i class="fa fa-external-link"></i></a></li>
                <li><a href="https://github.com/atiyahmzulkifli/azure-resume"><i class="fa fa-github"></i></a></li>
             </ul>
 
